--- a/src/Components/Bottles/Bottles.css
+++ b/src/Components/Bottles/Bottles.css
@@ -2,5 +2,10 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 15px;
-    padding-top: 50px;
+    padding-top: 25px;
+}
+
+.bottles img{
+    width: 100%;
+    height: 220px;
 }
